force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Batch_Object__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Batch_Object__c</fullName>
    <description>The object name corresponding to this batch (e.g. MUSW__Permit__c)</description>
    <label>Batch Object</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>