force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>