force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Default_Filters__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Default_Filters__c</fullName>
    <label>Default Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>