force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Maximum_Records__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Maximum_Records__c</fullName>
    <description>If the number of records returned by the Batch is greater than the Maximum they get capped</description>
    <inlineHelpText>If the number of records returned by the Batch is greater than the Maximum they get capped</inlineHelpText>
    <label>Maximum Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>