force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Minimum_Records__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Minimum_Records__c</fullName>
    <description>The minimum threshold, including filters and the percentage, for the Batch to run</description>
    <inlineHelpText>The minimum threshold, including filters and the percentage, for the Batch to run</inlineHelpText>
    <label>Minimum Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>