force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Profile_Access__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Profile_Access__c</fullName>
    <description>Profile(s) attached to the batch settings</description>
    <label>Profile Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>