force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Randomize_Percentage__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Randomize_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Randomize Percentage</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>