force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__Randomize_Rounding_Method__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Randomize_Rounding_Method__c</fullName>
    <defaultValue>"CEILING"</defaultValue>
    <description>FLOOR/CEILING</description>
    <inlineHelpText>FLOOR/CEILING</inlineHelpText>
    <label>Randomize Rounding Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>