force-app/main/default/objects/BGBK__BatchSettings__c/fields/BGBK__ScheduledJobIds__c.field-meta.xml
<CustomField>
    <fullName>BGBK__ScheduledJobIds__c</fullName>
    <description>List of comma-delimited Apex Scheduled Job ID's for this batch</description>
    <label>ScheduledJobIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>